# ZK-Identities

./: .gitignore  README.md  generate_poseidon_inputs.js  main.py  poseidon_bridge.js  pyproject.toml  setup.sh  test_circuits_compile.sh  test_circuits_full.sh  test_proofs.sh
artifacts/: .gitkeep  global_root.json  normalized.parquet
benchmarks/: QUICK_REFERENCE.md  README.md  comprehensive_benchmark.py  end_to_end_metrics.py  mutation_metrics.py  mutation_sweep.py  plot_comprehensive.py  plot_metrics.py  predicate_batch_metrics.py  query_parser.py  run_comprehensive_benchmarks.sh  run_full_test.sh  smoke_test.py  visualize_progress.py
circuits/: input_predicate.json  input_rotation.json  predicate.circom  rotation.circom
data/: .gitkeep  synthetic_driver_license_data.csv
docs/: GIT_GUIDE.md  normalization.md  system_architecture.md
src/: batch_fetch_client.py  benchmark_encrypted_db.py  build_inner_trees.py  build_merkle_archive.py  build_outer_tree.py  complete_flow.py  demo_encrypted_db.py  encrypted_cloud_storage.py  encrypted_database.py  encrypted_db_system.py  encrypted_identity_db.py  export_user_bundles.py  generate_dataset.py  normalize_data.py  poseidon_hash.py  visualize_db_structure.py
src/zkid/: blind_signatures.py  crypto.py  prover.py  schnorr.py  verifier.py
