[project]
name = "private-identity-verifier"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "faker>=37.12.0",
    "fastparquet>=2024.11.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pymerkle>=6.1.0",
]
